[gd_scene load_steps=2 format=3 uid="uid://bp8fmgyn35oui"]

[ext_resource type="Script" path="res://scenes/views/market/market.gd" id="1_dtrnh"]

[node name="Market" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -240.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dtrnh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
text = "Market"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Label_Title" type="Label" parent="VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Trade Silver for Logs"
horizontal_alignment = 1

[node name="SpinBox_AmountSilver" type="SpinBox" parent="VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
max_value = 10000.0
step = 100.0

[node name="Label_ExchangeRateLogs" type="Label" parent="VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Exchange Rate: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_ReceiveLogs" type="Label" parent="VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Receive in Logs:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TradeSilverForLogsButton" type="Button" parent="VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 80)
layout_mode = 2
size_flags_horizontal = 4
text = "Trade"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
text = "Future Content"
horizontal_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/MarginContainer3"]
layout_mode = 2
text = "Future Content"
horizontal_alignment = 1
